[gd_scene load_steps=4 format=3 uid="uid://b2cvkdgr1qfub"]

[ext_resource type="Script" path="res://main.gd" id="1_0r6qh"]

[sub_resource type="ImageTexture" id="ImageTexture_1"]

[sub_resource type="Image" id="Image_1"]
data = {
"data": PackedByteArray(255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255),
"format": "RGBA8",
"height": 4,
"mipmaps": false,
"width": 4
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0r6qh")

[node name="EnhancedSprite" type="EnhancedSprite" parent="."]
position = Vector2(400, 300)
texture = SubResource("ImageTexture_1")
bounce_speed = 250.0
bounce_area_size = Vector2(780, 580)
bounce_enabled = true
cycle_time = 1.5
color_cycling_enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ControlPanel" type="VBoxContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -160.0
offset_right = 200.0
offset_bottom = -20.0

[node name="StartButton" type="Button" parent="UI/ControlPanel"]
layout_mode = 2
text = "Start"

[node name="StopButton" type="Button" parent="UI/ControlPanel"]
layout_mode = 2
text = "Stop"
disabled = true

[node name="ResetButton" type="Button" parent="UI/ControlPanel"]
layout_mode = 2
text = "Reset"

[node name="InfoLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
text = "DVD Screensaver Demo
Standby!"
horizontal_alignment = 2

[node name="BoundaryLabel" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -20.0
text = "Boundary Bonks: None"
horizontal_alignment = 2
